--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -9,13 +9,13 @@
     {% load static %}
     <!-- Favicon img -->
     <link rel="shortcut icon" href="{% static 'images/favicon.png' %}">
-    <!-- Bootstarp min css -->
+    <!-- Bootstrap min css -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <!-- All min css -->
     <link rel="stylesheet" href="{% static 'css/all.min.css' %}">
     <!-- Swiper bundle min css -->
     <link rel="stylesheet" href="{% static 'css/swiper-bundle.min.css' %}">
-    <!-- Magnigic popup css -->
+    <!-- Magnific popup css -->
     <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
     <!-- Animate css -->
     <link rel="stylesheet" href="{% static 'css/animate.css' %}">
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <style>
+/* Your existing styles */
 .our-info {
     position: relative;
     overflow: hidden;
@@ -163,77 +164,6 @@
                             <a href="{% url 'contact' %}"><span>Get a quote</span> <i class="fa-solid fa-angles-right"></i></a>
                         </li>
                     </ul>
-                    <!-- Mega menu area start here -->
-                    <div class="mega-menu-area d-none d-xl-block">
-                        <div class="container">
-                            <div class="mega-menu">
-                                <div class="row g-4 justify-content-between">
-                                    <div class="col-md-2">
-                                        <div class="mega-menu__item">
-                                            <h5 class="primary-color">Our Project</h5>
-                                            <ul>
-                                                <li><a href="project.html">Our Project 01</a></li>
-                                                <li><a href="project-2.html">Our Project 02</a></li>
-                                                <li><a href="project-single.html">Project Details</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-2">
-                                        <div class="mega-menu__item">
-                                            <h5 class="primary-color">Donation</h5>
-                                            <ul>
-                                                <li><a href="donation.html">Donation 01</a></li>
-                                                <li><a href="donation-2.html">Donation 02</a></li>
-                                                <li><a href="donation-single.html">Donation Details</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-2">
-                                        <div class="mega-menu__item">
-                                            <h5 class="primary-color">Our Events</h5>
-                                            <ul>
-                                                <li><a href="event.html">Events 01</a></li>
-                                                <li><a href="event-2.html">Events 02</a></li>
-                                                <li><a href="event-single.html">Events Details</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-2">
-                                        <div class="mega-menu__item">
-                                            <h5 class="primary-color">Our Shop</h5>
-                                            <ul>
-                                                <li><a href="shop.html">Shop Page</a></li>
-                                                <li><a href="shop-single.html">Shop Details</a></li>
-                                                <li><a href="cart.html">Cart</a></li>
-                                                <li><a href="checkout.html">Checkout</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-2">
-                                        <div class="mega-menu__item">
-                                            <h5 class="primary-color">Team Members</h5>
-                                            <ul>
-                                                <li><a href="team.html">Our Teams 01</a></li>
-                                                <li><a href="team-2.html">Our Teams 02</a></li>
-                                                <li><a href="team-single.html">Team Details</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-2">
-                                        <div class="mega-menu__item float-end">
-                                            <h5 class="primary-color">More Pages</h5>
-                                            <ul>
-                                                <li><a href="faq.html">FAQ</a></li>
-                                                <li><a href="login.html">Login / Register</a></li>
-                                                <li><a href="error.html">404 Error</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Mega menu area end here -->
                 </div>
             </div>
         </div>
@@ -243,46 +173,38 @@
 {% block content %}
 {% endblock %}
 <!-- Our info area start here -->
-<div class="our-info">
-    <div class="background-img"></div>
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-3 wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".4s">
-            </div>
-            <div class="col-lg-5 wow fadeInDown" data-wow-duration="1.6s" data-wow-delay=".6s">
-                <div class="our-info__input">
-                    <form method="post" placeholder="Your email Address" action="{% url 'subscribe' %}">
-                        <i class="fa-regular fa-envelope our-info__input-envelope"></i>
-                        <i class="fa-solid fa-paper-plane our-info__input-plane"></i>
-                        {% csrf_token %}
-                        {{ form.email }}
-                        <button type="submit" class="fa-solid fa-paper-plane our-info__input-plane"></button>
-                    </form>
+    <div class="our-info">
+        <div class="background-img"></div>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-3 wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".4s">
                 </div>
-            </div>
-
-            <div class="col-lg-4">
-                <div class="our-info__social-icon float-lg-end float-none mt-4 mt-lg-">
-                    <a class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".2s" href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay=".3s" href="#"><i class="fa-brands fa-twitter"></i></a>
-                    <a class="wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".4s" href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                    <a class="wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".5s" href="#"><i class="fa-brands fa-youtube"></i></a>
+                <div class="col-lg-5 wow fadeInDown" data-wow-duration="1.6s" data-wow-delay=".6s">
+                    <div class="our-info__input">
+                        <form id="subscribe-form" method="post" action="{% url 'subscribe' %}">
+                            <i class="fa-regular fa-envelope our-info__input-envelope"></i>
+                            {% csrf_token %}
+                            {{ subscribe_form.email }}
+                            <button type="submit" class="fa-solid fa-paper-plane our-info__input-plane"></button>
+                        </form>
+                        <!-- Place the messages container here -->
+                        <div class="messages-container" id="message-container"></div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="our-info__social-icon float-lg-end float-none mt-4 mt-lg-">
+                        <a class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".2s" href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay=".3s" href="#"><i class="fa-brands fa-twitter"></i></a>
+                        <a class="wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".4s" href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a class="wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".5s" href="#"><i class="fa-brands fa-youtube"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
-        {% if messages %}
-        <div class="messages-container" id="message-container">
-            <ul>
-                {% for message in messages %}
-                <li class="message-item {% if message.tags %}{{ message.tags }}{% endif %}">{{ message }}</li>
-                {% endfor %}
-            </ul>
-        </div>
-        {% endif %}
     </div>
-</div>
-<!-- Our info area end here -->
-<script>
+    <!-- Our info area end here -->
+    
+    <script>
         $(document).ready(function() {
             $('#subscribe-form').submit(function(event) {
                 event.preventDefault(); // Prevent the form from submitting the traditional way
@@ -296,7 +218,7 @@
                         var messageContainer = $('#message-container');
                         messageContainer.empty(); // Clear previous messages
 
-                        var messageItem = $('<div class="message-item"></div>');
+                        var messageItem = $('<li class="message-item"></li>');
                         if (response.success) {
                             messageItem.addClass('success').text(response.message);
                         } else {
@@ -308,14 +230,14 @@
                         var messageContainer = $('#message-container');
                         messageContainer.empty(); // Clear previous messages
 
-                        var messageItem = $('<div class="message-item error"></div>');
+                        var messageItem = $('<li class="message-item error"></li>');
                         messageItem.text('An error occurred. Please try again later.');
                         messageContainer.append(messageItem);
                     }
                 });
             });
         });
-</script>
+    </script>
 
 {% include 'website/shared/footer.html' %}
 
