Fix: Footer gallery||Feat: Add blogs from admin

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -134,7 +134,7 @@
                         <li>
                             <a href="#">Resources <i class="fas fa-chevron-down"></i></a>
                             <ul class="sub-menu">
-                                <li><a href="{% url 'blog' %}">Blogs</a></li>
+                                <li><a href="{% url 'blogs' %}">Blogs</a></li>
                                 <li><a href="#">Whitepapers</a></li>
                                 <li><a href="#">Case Studies</a></li>
                                 <li><a href="#">FAQs</a></li>
