--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Green AI - Revolutionising Smart City Infrastructure</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js' %}"></script>
     {% load static %}
     <!-- Favicon img -->
     <link rel="shortcut icon" href="{% static 'images/favicon.png' %}">
@@ -135,9 +135,9 @@
                             <a href="#">Resources <i class="fas fa-chevron-down"></i></a>
                             <ul class="sub-menu">
                                 <li><a href="{% url 'blogs' %}">Blogs</a></li>
-                                <li><a href="#">Whitepapers</a></li>
-                                <li><a href="#">Case Studies</a></li>
-                                <li><a href="#">FAQs</a></li>
+                                <li><a href="{% url 'whitepapers' %}">Whitepapers</a></li>
+                                <li><a href="{% url 'casestudies' %}">Case Studies</a></li>
+                                <li><a href="{% url 'FAQs' %}">FAQs</a></li>
                             </ul>
                         </li>
                         <li>
@@ -213,7 +213,7 @@
 
                         var messageItem = $('<li class="message-item"></li>');
                         if (response.success) {
-                            messageItem.addClass('success').text(response.message);
+                            messageItem.addClass(succes '').text(response.message);
                             $('#subscribe-form')[0].reset(); // Reset the form on success
                         } else {
                             messageItem.addClass('error').text(response.message);
@@ -234,6 +234,35 @@
             });
         });
     </script>
+
+    <!-- Back to top area start here -->
+    <div class="scroll-up">
+        <svg class="scroll-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
+            <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
+        </svg>
+    </div>
+    <!-- Back to top area end here -->
+    
+    <!-- Jquery 3. 7. 1 Min Js -->
+    <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
+    <!-- Bootstrap min Js -->
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <!-- Swiper bundle min Js -->
+    <script src="{% static 'js/swiper-bundle.min.js' %}"></script>
+    <!-- Counterup min Js -->
+    <script src="{% static 'js/jquery.counterup.min.js' %}"></script>
+    <!-- Wow min Js -->
+    <script src="{% static 'js/wow.min.js' %}"></script>
+    <!-- Magnific popup min Js -->
+    <script src="{% static 'js/magnific-popup.min.js' %}"></script>
+    <!-- Nice select min Js -->
+    <script src="{% static 'js/nice-select.min.js' %}"></script>
+    <!-- Isotope pkgd min Js -->
+    <script src="{% static 'js/isotope.pkgd.min.js' %}"></script>
+    <!-- Waypoints Js -->
+    <script src="{% static 'js/jquery.waypoints.js' %}"></script>
+    <!-- Script Js -->
+    <script src="{% static 'js/script.js' %}"></script>
 
 {% include 'website/shared/footer.html' %}
 
