--- a/website/templates/website/blog_detail.html
+++ b/website/templates/website/blog_detail.html
@@ -14,7 +14,7 @@
     <!-- Page banner area start here -->
     <section class="page-banner bg-image pt-130 pb-130" style="background-image: url({{ blog.thumbnail_img.url }});">
         <div class="container">
-            <h2 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".2s">{{ blog.title }}</h2>
+            <h2 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".2s"></h2>
             <div class="breadcrumb-list wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".4s">
                 <a href="{% url 'index' %}">Home :</a>
                 <span class="primary-color">Latest News :</span>
@@ -26,7 +26,7 @@
     <!-- Specific Blog section start here -->
     <section class="blog-detail pt-130 pb-130">
         <div class="container">
-            {% comment %} <h2>{{ blog.title }}</h2> {% endcomment %}
+            <h2>{{ blog.title }}</h2>
             <p>{{ blog.content }}</p>
         </div>
     </section>
